# s3-sink

./: .dockerignore  .gitignore  Cargo.toml  README.md  bootstrap.sh
benches/: README.md  bench_sink.rs  docker-compose.yml  launch_sink_cluster.sh  producer.rs  setup.sh
src/: cache.rs  config.rs  data_model.rs  envelopes.rs  error.rs  file_io.rs  file_registry.rs  files.rs  json_serializer.rs  kafka_consumer.rs  key_generator.rs  lib.rs  object_key.rs  offset.rs  offset_registry.rs  partitioner.rs  processor.rs  record.rs  record_decoder.rs  record_group_by.rs  record_router.rs  sink.rs  state_machine.rs  stats.rs  test_utils.rs  timer_interrupts.rs  uploader.rs
src/files/: disk_file_registry.rs  file_io.rs  file_registry.rs
src/offset/: offset_envelope.rs  offset_registry.rs
src/record/: decoder.rs  router.rs
src/uploader/: mock_uploader.rs  s3_uploader.rs
