[package]
name = "s3-sink"
version = "0.1.0"
authors = ["Maxime St-Onge Amoretti"]
description = "A single-threaded asynchronous Rust-based Kafka S3 Sink"
edition = "2024"
autobenches = false

[dependencies]
aws-config = "1.8.17"
aws-msk-iam-sasl-signer = "1.0.1"
aws-sdk-s3 = "1.132.0"
aws-sdk-s3-transfer-manager = "0.1.3"
chrono = "0.4.44"
futures = "0.3.32"
rdkafka = { version = "0.39.0", features = ["tracing"] }
tokio = { version = "1.52.3", features = ["macros", "rt", "time", "test-util", "signal"]}
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
uuid = {version = "1.23.1", features = ["v4"] }
zstd = "0.13.3"

[[bin]]
name = "bench-producer"
path = "benches/producer.rs"

[[bin]]
name = "bench-sink"
path = "benches/bench_sink.rs"
